--- a/GUI/locales/ru.json
+++ b/GUI/locales/ru.json
@@ -17,7 +17,7 @@
     "playerNamePlaceholder": "Введите ваш ник",
     "gameBranch": "Версия игры",
     "releaseVersion": "Релиз (Стабильная)",
-    "preReleaseVersion": "Бета (Экспериментально)",
+    "preReleaseVersion": "Пре-Релиз (Экспериментально)",
     "customInstallation": "Модифицированная установка",
     "installationFolder": "Папка установки",
     "pathPlaceholder": "Путь по умолчанию",
@@ -135,7 +135,7 @@
     "hwAccelDescription": "Включить аппаратное ускорение для лаунчера",
     "gameBranch": "Ветка игры",
     "branchRelease": "Релиз",
-    "branchPreRelease": "Бета",
+    "branchPreRelease": "Пре-Релиз",
     "branchHint": "Переключает между релизом и бетой игры",
     "branchWarning": "Изменение ветки скачает и установит другую версию игры",
     "branchSwitching": "Переключение на {branch}...",
@@ -199,7 +199,7 @@
     "uuidSetFailed": "Не удалось поставить кастомный UUID",
     "uuidSetSuccess": "Кастомный UUID успешно установлен!",
     "uuidDeleteFailed": "Не удалось удалить UUID",
-    "uuidDeleteSuccess": "Удаление UUID успешно!",
+    "uuidDeleteSuccess": "Удаление UUID успешно завершено!",
     "modsDownloading": "Скачивание {name}...",
     "modsTogglingMod": "Включение мода...",
     "modsDeletingMod": "Удаление мода...",
