--- a/GUI/locales/ru.json
+++ b/GUI/locales/ru.json
@@ -233,17 +233,17 @@
     "downloading": "Скачивание...",
     "installing": "Установка...",
     "extracting": "Извлечение...",
-    "verifying": "Сверка...",
+    "verifying": "Проверка...",
     "switchingProfile": "Смена профиля...",
-    "profileSwitched": "Профиль сменен!",
+    "profileSwitched": "Профиль сменён!",
     "startingGame": "Запуск игры...",
     "launching": "ЗАПУСК...",
     "uninstallingGame": "Удаление игры...",
     "gameUninstalled": "Игра успешно удалена!",
-    "uninstallFailed": "Удаление игры не удалось: {error}",
+    "uninstallFailed": "Удаление игры прервано с ошибкой: {error}",
     "startingUpdate": "Начало обязательного обновления игры...",
     "installationComplete": "Установка успешно завершена!",
-    "installationFailed": "Установка не удалась: {error}",
+    "installationFailed": "Установка прервана с ошибкой: {error}",
     "installingGameFiles": "Установка файлов игры...",
     "installComplete": "Установка завершена!"
   }
