--- a/GUI/locales/ru-RU.json
+++ b/GUI/locales/ru-RU.json
@@ -119,7 +119,7 @@
     "repairGame": "Починить игру",
     "reinstallGame": "Переустановить файлы игры (сохраняет данные)",
     "gpuPreference": "Предпочтение GPU",
-    "gpuHint": "Выберите ваш предпочитаемый GPU (Linux: влияет на DRI_PRIME)",
+    "gpuHint": "Функция доступна только на ноутбуках; при использовании на ПК выберите встроенную видеокарту.",
     "gpuAuto": "Автоматический выбор",
     "gpuIntegrated": "Интегрированная видеокарта",
     "gpuDedicated": "Дискретная видеокарта",
